# pyelflabeler

./: .gitignore  README.md  README_zh-TW.md  label.py  main.py  pyproject.toml
src/analyzers/: base_analyzer.py  benignware_analyzer.py  malware_analyzer.py
src/utils/: elf_utils.py
